tests/NormalTests/paczka1/fuzzy1/48473772.err
Error in line 2: xE7c S373 37,4
Error in line 5: 2if8S2JT A771 63,6
Error in line 33: xE7c A771 91,8
Error in line 36: pldrqh5FcX S373 40,92
Error in line 34: xE7c A278 59,9
Error in line 30: SaqhkEcuEJ0 A445 30,2
